--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "motion": "^12.23.24",
     "plyr": "^3.8.3",
     "preline": "^3.2.3",
-    "smoothscroll-for-websites": "^1.5.1"
+    "smoothscroll-for-websites": "^1.5.1",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.5",
