added google analytics

--- a/src/config/config.toml
+++ b/src/config/config.toml
@@ -110,7 +110,16 @@
 # [head] (Add custom scripts, stylesheets, and meta tags to be rendered in the <head> section of the page)
 # -----------------------------------------------------------------------------------------------------------------------------------
 [head]
-  content = """
-  <!-- You can easily add this type of tracking code by updating the `config.toml` file -->
-  <script defer src="/umami.is.js" data-website-id=""></script>
-  """
+content = """
+<!-- You can easily add this type of tracking code by updating the `config.toml` file -->
+<script defer src="/umami.is.js" data-website-id=""></script>
+
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SV3QLRHSK6"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'G-SV3QLRHSK6');
+</script>
+"""
