--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.16",
     "@types/jest": "^30.0.0",
-    "astro": "5.15.1",
+    "astro": "^5.16.8",
     "astro-auto-import": "^0.4.5",
     "astro-font": "^1.1.0",
     "chalk": "^5.6.2",
